Implement POST /v1/appmgr/myapps/{my_app_id}/action
