# api_docs/fog_director_api/swagger.yaml
@@ -134,6 +134,7 @@ definitions:
         - c1.medium
         - c1.large
         - c1.xlarge
+        - custom
     required:
     - cpu
     - memory
@@ -164,6 +165,16 @@ definitions:
       stop:
         type: object
         additionalProperties: false
+      undeploy:
+        type: object
+        properties:
+          devices:
+            description: List Device identifiers to whom uninstall the MyApp
+            type: array
+            items:
+              type: string
+        required:
+        - devices
     minProperties: 1
     maxProperties: 1
     type: object
@@ -418,12 +429,14 @@ paths:
         required: true
         description: myApp identifier
       - in: query
-        name: profile
+        name: job_intensivity
         type: string
+        required: false
+        default: normal
         enum:
-        - a
-        - b
-        - c
+        - quiet
+        - normal
+        - heavy
         description: Simulator job intensitivy profile used to represent an heavy resources application usage
       - in: body
         name: body
@@ -432,6 +445,13 @@ paths:
       responses:
         '200':
           description: HTTP/200
+          schema:
+            type: object
+            properties:
+              jobId:
+                type: string
+            required:
+            - jobId
       security:
       - XTokenId: []
 
